<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="teamprojectgroup3.codesyntaxguide.ELSEIF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/scrollView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                style="wrap_content"
                android:weightSum="1"
                android:baselineAligned="false">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_elseif"
                    android:id="@+id/elseif_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_language_cplusplus"
                    android:id="@+id/cplusplus_title"
                    android:layout_marginTop="23dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:text="@string/else_if_cplusplus"
                    android:id="@+id/cplusplus_code"
                    android:layout_weight="0.35" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_language_csharp"
                    android:id="@+id/csharp_title"
                    android:layout_marginTop="28dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/else_if_csharp"
                    android:id="@+id/csharp_code"
                    android:layout_marginTop="19dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_language_python"
                    android:id="@+id/python_title"
                    android:layout_marginTop="29dp"
                    android:textStyle="bold" />

                <TextView android:text="@string/else_if_python" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/python_code"
                    android:layout_marginTop="23dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_language_java"
                    android:id="@+id/java_title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/else_if_java"
                    android:id="@+id/java_code" />
            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</RelativeLayout>
